--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Oleo+Script:wght@400;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,700;0,800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap");
 
 @tailwind base;
 @tailwind components;
@@ -29,6 +29,7 @@
   }
   .heading__primary {
     @apply mt-[0.6rem] p-2 sm:p-0 leading-[3.5rem] text-white text-[27px] md:text-[30px] lg:text-[38px] xl:text-[45px];
+    font-family: "Playfair Display", serif;
   }
 }
 
@@ -45,7 +46,7 @@
     linear-gradient(
       to top,
       rgba(0, 8, 255, 0.4) 0,
-      rgba(70, 14, 255, 0.25)200%
+      rgba(70, 14, 255, 0.25) 200%
     );
   background-blend-mode: multiply;
   clip-path: circle(50px at 95% 4%);
